# MaharajahC

./: .clang-format  .gitignore  Attacks.c  Attacks.h  CMakeLists.txt  Constants.h  Defines.h  Fen.c  Fen.h  FindMagicNumbers.c  FindMagicNumbers.h  Functions.c  Functions.h  Globals.c  Globals.h  Gui.c  Gui.h  Inits.c  MagicNumbers.c  MagicNumbers.h  MaharajahEngine.cmake  Perft.c  Perft.h  Prints.c  Prints.h  README.md  main.c
headers/: Attacks.h  Defines.h  Evaluate.h  Fen.h  FindMagicNumbers.h  Functions.h  Globals.h  Gui.h  Inits.h  Masks.h  Moves.h  Prints.h  Search.h  Transposition.h  UCI.h  Utils.h  Zobrist.h
include/board/: Fen.h
include/engine/: Attacks.h  Engine.h  Evaluate.h  FindMagics.h  Globals.h  MagicNumbers.h  Masks.h  Moves.h  Search.h  Transposition.h  Zobrist.h
include/maharajah/board/: Fen.h  Prints.h
include/maharajah/engine/: Attacks.h  Engine.h  Evaluate.h  FindMagics.h  Globals.h  Inits.h  MagicNumbers.h  Masks.h  Moves.h  Search.h  Transposition.h  Zobrist.h
include/maharajah/ffi/: EngineFFI.h
include/maharajah/parse/: Parse.h
include/maharajah/perft/: Perft.h
include/maharajah/uci/: Prints.h  UCI.h
include/maharajah/util/: Defines.h  Utils.h
include/perft/: Perft.h
include/uci/: Prints.h
include/util/: Defines.h  Utils.h
sources/: Attacks.c  Evaluate.c  Fen.c  FindMagicNumbers.c  FindMagics.c  Functions.c  Globals.c  Gui.c  Inits.c  MagicNumbers.c  Masks.c  Perft.c  Prints.c  Search.c  Transposition.c  UCI.c  Zobrist.c  main.c
src/: main.c
src/board/: Fen.c  Prints.c
src/cli/: main.c
src/engine/: Attacks.c  Engine.c  Evaluate.c  FindMagics.c  Globals.c  Inits.c  MagicNumbers.c  Masks.c  Moves.c  Search.c  Transposition.c  Zobrist.c
src/ffi/: EngineFFI.c
src/parse/: Parse.c
src/perft/: Perft.c
src/uci/: Prints.c  UCI.c
tests/: perft_smoke.c  uci_smoke.sh
